2003-04-08  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_smpp.c: fixed some more typos. Thanks again to 
      "Rachman Chavik" <rachman.chavik@radius-ed.com> for this.
    * contrib/mon/kannel.monitor: fixing problems for perl 5.8.0 release with
      reference hashes. Thanks to "Dariusz Markowicz" <dariuszm@tenbit.pl>.

2003-04-07  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_smpp.c: fixed an obivious typo. Patch provided by 
      "Rachman Chavik" <rchavik@attglobal.net>. Thanks a lot.

2003-04-06  Stipe Tolj  <tolj@wapme-systems.de>
    * configure[.in]: fixed a bug from previous commit.

2003-04-06  Stipe Tolj  <tolj@wapme-systems.de>
    * configure[.in]: fixing BUG#18, which caused to break the build process
      if mysql had library dependencies (ie. -lz) because they where not 
      included in the last stage linking process. Now we try to detect via
      mysql_config which libraries should be added.

2003-04-05  Bruno Rodrigues  <bruno.rodrigues@litux.org> 
    * debian/*: syncronized with .diff files
    * debian: now defaults to generating a kannel-cvs package for building
      daily snapshots. To build stable or devel, rename
      {changelog,control}.{stable,devel} to {changelog,control}
    * debian/.cvsignore: also ignore kannel-cvs temporary directories
    * debian/*.postinst: fixed chown /var/run bug
    * config.{guess,sub}: updated to new files - hope it won't break anything
    * gw/sms.c: also set alt_dcs=0, improvement to Alexander patch at Mar 04
    * Note: kannel 1.2.1 and 1.3.1 are about to enter debian :)))))

2003-04-05  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_http.c: fixed compiler warning.

2003-04-04  Stipe Tolj  <tolj@wapme-systems.de>
    * test/test_headers.c: changed to take an argument as filename instead
      of the hard-coded filename.
    * test/test_http_server.c: more -? output added and added a -r option to
      define which static reply text should be in response.