@@ -70,17 +70,17 @@ contrib/webalizer/webalizer.conf -text
 debian/changelog -text
 debian/changelog.devel -text
 debian/changelog.stable -text
+debian/compat -text
 debian/control -text
 debian/control.devel -text
 debian/control.stable -text
 debian/copyright -text
 debian/kannel-cvs-docs.docs -text
-debian/kannel-cvs-extras.docs -text
-debian/kannel-cvs-extras.files -text
+debian/kannel-cvs-extras.install -text
 debian/kannel-cvs.default -text
 debian/kannel-cvs.dirs -text
 debian/kannel-cvs.docs -text
-debian/kannel-cvs.files -text
+debian/kannel-cvs.examples -text
 debian/kannel-cvs.init -text
 debian/kannel-cvs.install -text
 debian/kannel-cvs.links -text
@@ -88,12 +88,11 @@ debian/kannel-cvs.logrotate -text
 debian/kannel-cvs.postinst -text
 debian/kannel-cvs.postrm -text
 debian/kannel-devel-docs.docs -text
-debian/kannel-devel-extras.docs -text
-debian/kannel-devel-extras.files -text
+debian/kannel-devel-extras.install -text
 debian/kannel-devel.default -text
 debian/kannel-devel.dirs -text
 debian/kannel-devel.docs -text
-debian/kannel-devel.files -text
+debian/kannel-devel.examples -text
 debian/kannel-devel.init -text
 debian/kannel-devel.install -text
 debian/kannel-devel.links -text
@@ -101,13 +100,12 @@ debian/kannel-devel.logrotate -text
 debian/kannel-devel.postinst -text
 debian/kannel-devel.postrm -text
 debian/kannel-docs.docs -text
-debian/kannel-extras.docs -text
-debian/kannel-extras.files -text
+debian/kannel-extras.install -text
 debian/kannel.conf -text
 debian/kannel.default -text
 debian/kannel.dirs -text
 debian/kannel.docs -text
-debian/kannel.files -text
+debian/kannel.examples -text
 debian/kannel.init -text
 debian/kannel.install -text
 debian/kannel.links -text
