@@ -1,0 +1,2 @@
+debian/tmp/usr/lib/kannel/* usr/lib/kannel-cvs
+debian/tmp/usr/share/doc/kannel/contrib usr/share/kannel-cvs
