@@ -1,1 +1,0 @@
-debian/tmp/usr/share/doc/kannel/contrib
