@@ -3,4 +3,3 @@ README
 NEWS
 TODO
 VERSION
-debian/tmp/usr/share/doc/kannel/examples
