@@ -1,3 +1,0 @@
-usr/bin
-usr/sbin
-usr/share/man
